src/snapshots/fad__disasm_tests__disasm_json_enum_untagged_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== json/enum_untagged ===
> push rbp
  sub rsp, 0x60
  mov qword [rsp], rbp
  mov qword [rsp + 0x10], r12
  mov qword [rsp + 0x18], r13
  mov qword [rsp + 0x20], r14
  mov qword [rsp + 0x28], r15
  mov r14, rdi
  mov r15, rsi
  mov r12, qword [r15]
  mov r13, qword [r15 + 0x8]
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x48]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x453
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x7b
  jz $+0x26
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x22
  jz $+0x338
  mov dword [r15 + 0x10], 0xe
  jmp $+0x417
  mov byte [r14], 0x1
  mov qword [rsp + 0x30], 0x0
  cmp r12, r13
  jge $+0x47
  movzx r10d, byte [r12]
  cmp r10b, 0x20
  jz $+0x1e
  cmp r10b, 0x9
  jz $+0x14
  cmp r10b, 0xa
  jz $+0xa
  cmp r10b, 0xd
  jnz $+0x8
  inc r12
  jmp $-0x3e
  cmp r10b, 0x7b
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x5
  jmp $+0x3a7
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x48]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x372
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x7d
  jz $+0x233
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x38]
  lea rdx, qword [rsp + 0x40]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x31f
  cmp r12, r13
  jge $+0x47
  movzx r10d, byte [r12]
  cmp r10b, 0x20
  jz $+0x1e
  cmp r10b, 0x9
  jz $+0x14
  cmp r10b, 0xa
  jz $+0xa
  cmp r10b, 0xd
  jnz $+0x8
  inc r12
  jmp $-0x3e
  cmp r10b, 0x3a
  jnz $+0x8
  inc r12
  jmp $+0x10
  mov dword [r15 + 0x10], 0x6
  jmp $+0x2bf
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x4
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x39
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x8
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x5b
  jmp $+0xac
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x8]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x21e
  mov rax, qword [rsp + 0x30]
  mov r10, 0x1
  or rax, r10
  mov qword [rsp + 0x30], rax
  jmp $+0x83
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x20]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x1c8
  mov rax, qword [rsp + 0x30]
  mov r10, 0x2
  or rax, r10
  mov qword [rsp + 0x30], rax
  jmp $+0x2d
  mov qword [r15], r12
  mov rdi, r15
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x179
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x48]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x144
  movzx r10d, byte [rsp + 0x48]
  cmp r10d, 0x1
  jz $+0xc
  jmp $-0x233
  add r12, 0x1
  mov rax, qword [rsp + 0x30]
  mov r10, 0x3
  and rax, r10
  cmp rax, r10
  jz $+0x10
  mov dword [r15 + 0x10], 0xa
  jmp $+0xf4
  jmp $+0xc7
  mov qword [rsp + 0x50], r12
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [rsp + 0x38]
  lea rdx, qword [rsp + 0x40]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0xaa
  mov rdi, qword [rsp + 0x38]
  mov rsi, qword [rsp + 0x40]
  mov rdx, 0x<imm>
  mov ecx, 0x3
  mov rax, 0x<imm>
  call rax
  test rax, rax
  jnz $+0x45
  mov r12, qword [rsp + 0x50]
  mov byte [r14], 0x2
  mov qword [r15], r12
  mov rdi, r15
  lea rsi, qword [r14 + 0x8]
  mov rax, 0x<imm>
  call rax
  mov r12, qword [r15]
  mov r10d, dword [r15 + 0x10]
  test r10d, r10d
  jnz $+0x36
  jmp $+0x9
  mov byte [r14], 0x0
  jmp $+0x0
  mov qword [r15], r12
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
  mov r15, qword [rsp + 0x28]
  mov r14, qword [rsp + 0x20]
  mov r13, qword [rsp + 0x18]
  mov r12, qword [rsp + 0x10]
  mov rbp, qword [rsp]
  add rsp, 0x60
  pop rbp
  ret
