src/snapshots/fad__disasm_tests__disasm_json_flatten_x86_64.snap
---
source: src/disasm_tests.rs
expression: out
---
=== json/flatten ===
000000: <entry>  push rbp
000001:  sub rsp, 0x60
000008:  mov qword [rsp], rbp
00000c:  mov qword [rsp + 0x10], r12
000011:  mov qword [rsp + 0x18], r13
000016:  mov qword [rsp + 0x20], r14
00001b:  mov qword [rsp + 0x28], r15
000020:  mov r14, rdi
000023:  mov r15, rsi
000026:  mov r12, qword [r15]
00002d:  mov r13, qword [r15 + 0x8]
000034:  mov qword [rsp + 0x30], 0x0
000040:  mov qword [r15], r12
000047:  mov rdi, r15
00004a:  mov rax, 0x<imm>
000054:  call rax
000056:  mov r12, qword [r15]
00005d:  mov r10d, dword [r15 + 0x10]
000064:  test r10d, r10d
000067:  jnz $+0x332
00006d:  mov qword [r15], r12
000074:  mov rdi, r15
000077:  lea rsi, qword [rsp + 0x48]
00007f:  mov rax, 0x<imm>
000089:  call rax
00008b:  mov r12, qword [r15]
000092:  mov r10d, dword [r15 + 0x10]
000099:  test r10d, r10d
00009c:  jnz $+0x2fd
0000a2:  movzx r10d, byte [rsp + 0x48]
0000ab:  cmp r10d, 0x7d
0000b2:  jz $+0x28a
0000b8:  mov qword [r15], r12
0000bf:  mov rdi, r15
0000c2:  lea rsi, qword [rsp + 0x38]
0000ca:  lea rdx, qword [rsp + 0x40]
0000d2:  mov rax, 0x<imm>
0000dc:  call rax
0000de:  mov r12, qword [r15]
0000e5:  mov r10d, dword [r15 + 0x10]
0000ec:  test r10d, r10d
0000ef:  jnz $+0x2aa
0000f5:  mov qword [r15], r12
0000fc:  mov rdi, r15
0000ff:  mov rax, 0x<imm>
000109:  call rax
00010b:  mov r12, qword [r15]
000112:  mov r10d, dword [r15 + 0x10]
000119:  test r10d, r10d
00011c:  jnz $+0x27d
000122:  mov rdi, qword [rsp + 0x38]
00012a:  mov rsi, qword [rsp + 0x40]
000132:  mov rdx, 0x<imm>
00013c:  mov ecx, 0x5
000141:  mov rax, 0x<imm>
00014b:  call rax
00014d:  test rax, rax
000150:  jnz $+0x6d
000156:  mov rdi, qword [rsp + 0x38]
00015e:  mov rsi, qword [rsp + 0x40]
000166:  mov rdx, 0x<imm>
000170:  mov ecx, 0x7
000175:  mov rax, 0x<imm>
00017f:  call rax
000181:  test rax, rax
000184:  jnz $+0x8f
00018a:  mov rdi, qword [rsp + 0x38]
000192:  mov rsi, qword [rsp + 0x40]
00019a:  mov rdx, 0x<imm>
0001a4:  mov ecx, 0x6
0001a9:  mov rax, 0x<imm>
0001b3:  call rax
0001b5:  test rax, rax
0001b8:  jnz $+0xb1
0001be:  jmp $+0x102
0001c3:  mov qword [r15], r12
0001ca:  mov rdi, r15
0001cd:  lea rsi, qword [r14]
0001d4:  mov rax, 0x<imm>
0001de:  call rax
0001e0:  mov r12, qword [r15]
0001e7:  mov r10d, dword [r15 + 0x10]
0001ee:  test r10d, r10d
0001f1:  jnz $+0x1a8
0001f7:  mov rax, qword [rsp + 0x30]
0001ff:  mov r10, 0x1
000209:  or rax, r10
00020c:  mov qword [rsp + 0x30], rax
000214:  jmp $+0xd9
000219:  mov qword [r15], r12
000220:  mov rdi, r15
000223:  lea rsi, qword [r14 + 0x30]
00022a:  mov rax, 0x<imm>
000234:  call rax
000236:  mov r12, qword [r15]
00023d:  mov r10d, dword [r15 + 0x10]
000244:  test r10d, r10d
000247:  jnz $+0x152
00024d:  mov rax, qword [rsp + 0x30]
000255:  mov r10, 0x2
00025f:  or rax, r10
000262:  mov qword [rsp + 0x30], rax
00026a:  jmp $+0x83
00026f:  mov qword [r15], r12
000276:  mov rdi, r15
000279:  lea rsi, qword [r14 + 0x18]
000280:  mov rax, 0x<imm>
00028a:  call rax
00028c:  mov r12, qword [r15]
000293:  mov r10d, dword [r15 + 0x10]
00029a:  test r10d, r10d
00029d:  jnz $+0xfc
0002a3:  mov rax, qword [rsp + 0x30]
0002ab:  mov r10, 0x4
0002b5:  or rax, r10
0002b8:  mov qword [rsp + 0x30], rax
0002c0:  jmp $+0x2d
0002c5:  mov qword [r15], r12
0002cc:  mov rdi, r15
0002cf:  mov rax, 0x<imm>
0002d9:  call rax
0002db:  mov r12, qword [r15]
0002e2:  mov r10d, dword [r15 + 0x10]
0002e9:  test r10d, r10d
0002ec:  jnz $+0xad
0002f2:  mov qword [r15], r12
0002f9:  mov rdi, r15
0002fc:  lea rsi, qword [rsp + 0x48]
000304:  mov rax, 0x<imm>
00030e:  call rax
000310:  mov r12, qword [r15]
000317:  mov r10d, dword [r15 + 0x10]
00031e:  test r10d, r10d
000321:  jnz $+0x78
000327:  movzx r10d, byte [rsp + 0x48]
000330:  cmp r10d, 0x1
000337:  jz $+0xc
00033d:  jmp $-0x28a
000342:  add r12, 0x1
000349:  mov rax, qword [rsp + 0x30]
000351:  mov r10, 0x7
00035b:  and rax, r10
00035e:  cmp rax, r10
000361:  jz $+0x10
000367:  mov dword [r15 + 0x10], 0xa
000372:  jmp $+0x28
000377:  mov qword [r15], r12
00037e:  mov r15, qword [rsp + 0x28]
000383:  mov r14, qword [rsp + 0x20]
000388:  mov r13, qword [rsp + 0x18]
00038d:  mov r12, qword [rsp + 0x10]
000392:  mov rbp, qword [rsp]
000396:  add rsp, 0x60
00039d:  pop rbp
00039e:  ret
00039f:  mov r15, qword [rsp + 0x28]
0003a4:  mov r14, qword [rsp + 0x20]
0003a9:  mov r13, qword [rsp + 0x18]
0003ae:  mov r12, qword [rsp + 0x10]
0003b3:  mov rbp, qword [rsp]
0003b7:  add rsp, 0x60
0003be:  pop rbp
0003bf:  ret
